Reset MetalRedrawer to pre-PR state