@@ -2,14 +2,10 @@ package org.jetbrains.skiko.redrawer
 
 import kotlinx.coroutines.*
 import kotlinx.coroutines.channels.Channel
-import org.jetbrains.skia.ISize
 import org.jetbrains.skiko.*
 import org.jetbrains.skiko.context.MetalContextHandler
-import java.awt.Component
-import java.awt.Dimension
 import java.util.concurrent.atomic.AtomicBoolean
 import javax.swing.SwingUtilities.*
-import kotlin.time.Duration.Companion.milliseconds
 
 /**
  * Holder for pointer on MetalDevice described in "MetalDevice.h"
@@ -69,28 +65,11 @@ internal class MetalRedrawer(
     private val windowOcclusionStateChannel = Channel<Boolean>(Channel.CONFLATED)
     @Volatile private var isWindowOccluded = false
 
-    /**
-     * Whether the window is in live-resize mode.
-     */
-    @Volatile
-    private var isInLiveResize: Boolean = false
-
     init {
         onDeviceChosen(adapter.name)
         val numberOfBuffers = properties.frameBuffering.numberOfBuffers() ?: 0 // zero means default for system
         val initDevice = layer.backedLayer.useDrawingSurfacePlatformInfo {
-            MetalDevice(
-                createMetalDevice(
-                    window = layer.windowHandle,
-                    transparency = layer.transparency,
-                    frameBuffering = numberOfBuffers,
-                    adapter = adapter.ptr,
-                    platformInfo = it,
-                    // Live resize is driven from the window, so only enable it when this layer covers the whole
-                    // window. When embedded as a Swing component (fillsWindow = false), fall back to the legacy path.
-                    liveResizeEnabled = layer.fillsWindow && SkikoProperties.metalSynchronousLiveResize
-                )
-            )
+            MetalDevice(createMetalDevice(layer.windowHandle, layer.transparency, numberOfBuffers, adapter.ptr, it))
         }
         _device = initDevice
         contextHandler = MetalContextHandler(layer, initDevice, adapter)
@@ -117,14 +96,7 @@ internal class MetalRedrawer(
 
     override fun needRender(throttledToVsync: Boolean) {
         checkDisposed()
-        if (isInLiveResize) {
-            // The background frame loop is gated off during a resize (two presenters deadlock / starve
-            // the drawable pool), so drive animation frames from the AppKit main thread instead — the
-            // same single serialized presenter that setBounds uses.
-            scheduleFrameOnAppKitThread()
-        } else {
-            frameDispatcher.scheduleFrame(needUpdate = true, throttledToVsync = throttledToVsync)
-        }
+        frameDispatcher.scheduleFrame(needUpdate = true, throttledToVsync = throttledToVsync)
     }
 
     override fun renderImmediately() {
@@ -147,7 +119,7 @@ internal class MetalRedrawer(
     private suspend fun draw() {
         inDrawScope {
             // Move drawing to another thread to free the main thread
-            // It can be expensive to run it in the main thread, and FPS can become unstable.
+            // It can be expensive to run it in the main thread and FPS can become unstable.
             // This is visible by running [SkiaLayerPerformanceTest], standard deviation is increased significantly.
             withContext(dispatcherToBlockOn) {
                 performDraw()
@@ -157,7 +129,7 @@ internal class MetalRedrawer(
 
         // When window is not visible - it doesn't make sense to redraw fast to avoid battery drain.
         if (isWindowOccluded) {
-            withTimeoutOrNull(300.milliseconds) {
+            withTimeoutOrNull(300) {
                 // If the window becomes non-occluded, stop waiting immediately
                 @Suppress("ControlFlowWithEmptyBody")
                 while (windowOcclusionStateChannel.receive()) { }
@@ -172,96 +144,16 @@ internal class MetalRedrawer(
         windowOcclusionStateChannel.trySend(isOccluded)
     }
 
-    private fun LayerDrawScope.performDraw(finishFrame: Boolean = true) {
-        synchronized(drawLock) {
-            if (!isDisposed) {
-                autoreleasepool {
-                    contextHandler.draw()
-                    if (finishFrame) {
-                        contextHandler.finishFrame()
-                    }
-                }
+    private fun LayerDrawScope.performDraw() = synchronized(drawLock) {
+        if (!isDisposed) {
+            autoreleasepool {
+                contextHandler.draw()
             }
         }
     }
 
-    /**
-     * Called from native code, on the AppKit main thread, when a live resizing session starts.
-     */
-    @Suppress("unused")
-    fun onLiveResizeStarted() {
-        isInLiveResize = true
-        scheduleFrameOnAppKitThread()
-    }
-
-    /**
-     * Called from native code, on the AppKit main thread, when a live resizing session ends.
-     */
-    @Suppress("unused")
-    fun onLiveResizeEnded() {
-        isInLiveResize = false
-        invokeLater {
-            if (!isDisposed) {
-                needRender(throttledToVsync = false)
-            }
-        }
-    }
-
-    override fun onPlatformComponentResized() {
-        // During live resize, the layer tells us its size directly; the AWT size is not in sync
-        if (!isInLiveResize) {
-            super.onPlatformComponentResized()
-        }
-    }
-
-    /**
-     * Called from native code, on the AppKit main thread, to draw a frame during live resize.
-     */
-    @Suppress("unused")
-    fun drawFrameWhileLiveResizing(width: Int, height: Int) {
-        if (isDisposed || width <= 0 || height <= 0) return
-
-        // Record content at exactly the present size, on the EDT.
-        try {
-            invokeOnEventThreadAndWait {
-                val layerSize = Dimension(width, height)
-                update(forcedSize = layerSize)
-                inDrawScope(forcedSize = layerSize) {
-                    if (!isDisposed) {
-                        // The present must run on the AppKit main thread to join the resize transaction, so
-                        // only record here; `finishFrameInLiveResize` presents below on the AppKit main thread
-                        performDraw(finishFrame = false)
-                    }
-                }
-            }
-        } catch (e: Exception) {
-            Logger.warn(e) { "Failed to record live-resize frame" }
-            return
-        }
-
-        // The present must run on the AppKit main thread to join the resize transaction
-        synchronized(drawLock) {
-            if (!isDisposed) {
-                contextHandler.finishFrameInLiveResize()
-            }
-        }
-    }
-
-    /**
-     * Requests one frame on the AppKit main thread (during a live resize).
-     *
-     * Coalescing (at most one pending frame) lives natively in `scheduleFrameOnAppKitThread`, which hops to the
-     * main queue and calls back into [drawFrameWhileLiveResizing], where the frame is rendered and presented.
-     */
-    private fun scheduleFrameOnAppKitThread() {
-        if (isDisposed) return
-        scheduleFrameOnAppKitThread(device.ptr)
-    }
-
-    override fun syncBoundsFromPlatformComponent() = synchronized(drawLock) {
+    override fun syncBounds() = synchronized(drawLock) {
         check(isEventDispatchThread()) { "Method should be called from AWT event dispatch thread" }
-        if (isInLiveResize) return
-
         val rootPane = getRootPane(layer)
         val globalPosition = convertPoint(layer.backedLayer, 0, 0, rootPane)
         setContentScale(device.ptr, layer.contentScale)
@@ -278,32 +170,11 @@ internal class MetalRedrawer(
         setLayerVisible(device.ptr, isVisible)
     }
 
-    private external fun createMetalDevice(window: Long, transparency: Boolean, frameBuffering: Int, adapter: Long, platformInfo: Long, liveResizeEnabled: Boolean): Long
+    private external fun createMetalDevice(window: Long, transparency: Boolean, frameBuffering: Int, adapter: Long, platformInfo: Long): Long
     private external fun disposeDevice(device: Long)
     private external fun resizeLayers(device: Long, x: Int, y: Int, width: Int, height: Int)
     private external fun setLayerVisible(device: Long, isVisible: Boolean)
     private external fun setContentScale(device: Long, contentScale: Float)
-
-    /**
-     * Hops to the AppKit main thread (main dispatch queue) and calls back into [drawFrameWhileLiveResizing] with
-     * the layer's current pixel size. Used to drive frames through the single main-thread presenter during
-     * a live resize.
-     */
-    private external fun scheduleFrameOnAppKitThread(device: Long)
-
-    /**
-     * Like [javax.swing.SwingUtilities.invokeAndWait], but keeps the AppKit run loop spinning while waiting, so
-     * synchronous Java->AppKit calls made from [runnable] are serviced rather than deadlocking.
-     * [component] provides the AWT context for the call.
-     *
-     * This is done via `LWCToolkit.invokeAndWait`. `LWCToolkit` lives in a non-exported JDK package, but JNI is not
-     * subject to module access checks, so this needs no `--add-opens`.
-     */
-    private external fun invokeOnEventThreadAndWait(runnable: Runnable, component: Component)
-
-    private fun invokeOnEventThreadAndWait(runnable: Runnable) {
-        invokeOnEventThreadAndWait(runnable, layer)
-    }
 
     /**
      * Set this value to true to synchronize the presentation of the layer’s contents with the display’s refresh,
@@ -324,14 +195,13 @@ internal class MetalRedrawer(
         }
 
         private val updateDispatcher = FrameDispatcher(MainUIDispatcher) {
-            // Gated off during a live resize: presentation is driven from the AppKit main thread
-            if (layer.isShowing && !isInLiveResize) {
+            if (layer.isShowing) {
                 updateIfRequested()
             }
         }
 
         private val frameDispatcher = FrameDispatcher(MainUIDispatcher) {
-            if (layer.isShowing && !isInLiveResize) {
+            if (layer.isShowing) {
                 updateIfRequested()
                 draw()
             }
